--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,10 @@ jobs:
         run: yarn
 
       - name: Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v1.2.0
+        uses: TriPSs/conventional-changelog-action@v2.0.1
         with:
           github-token: ${{ secrets.github_token }}
+          releaseCount: '2'
 
       - name: publish
         run: |
